syntax = "proto3";

package user;

option go_package = "grpc4_1/grpc";

message User {
 string uuid = 1;
 string email = 2;
 string firstname = 4;
 string lastname = 5;
 string nickname = 6;
 string created_at = 7;
 string updated_at = 8;
}

// The user service definition.
service UserService {

  // Creates a new User
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Gets a user by their email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);

  // Gets a user by their ID
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);

  // Gets a list of users
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

  // Updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Deletes a user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// Service message definitions

message CreateUserRequest {
 string email = 1;
 string password = 2;
 string firstname = 3;
 string lastname = 4;
 string nickname = 5;
}

message CreateUserResponse {
  string uuid= 1;
}

message GetUserByEmailRequest {
 string email = 1;
}

message GetUserByEmailResponse {
 User user = 1; 
}

message GetUserByIDRequest { 
 string id = 1;
}

message GetUserByIDResponse {
 User user = 1; 
}

message GetUsersRequest {
}

message GetUsersResponse {
   repeated User users = 1; // A list of users
}

message UpdateUserRequest {
 string uuid= 10;
 string email = 1;
 string password = 2;
 string firstname = 3;
 string lastname = 4;
 string nickname = 5;
}

message UpdateUserResponse {
 bool ok = 1;
}

message DeleteUserRequest {
 string id = 1;
}

message DeleteUserResponse {
 bool ok = 1;
}
